// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`qwik Accordion 1`] = `
Object {
  "high.jsx": "
",
  "low.jsx": "import { h, qrl, useLexicalScope } from \\"@builder.io/qwik\\";


export const MyComponent_styles = \`
  .csw5022{
    display: flex;
    flex-direction: column;
    position: relative;
    flex-shrink: 0;
    box-sizing: border-box;
    margin-top: 20px;
    align-items: stretch;
  }
  .csanagh{
    margin-top: 10px;
    position: relative;
    display: flex;
    align-items: stretch;
    flex-direction: column;
    padding-bottom: 10px;
  }
  .c4qyc1p{
    position: relative;
    display: flex;
    align-items: stretch;
    flex-direction: column;
    margin-top: 10px;
    padding-bottom: 10px;
  }
  .crwdrpw{
    text-align: left;
    display: flex;
    flex-direction: column;
  }
  .ctcw2m4{
    padding-top: 50px;
    text-align: left;
    display: flex;
    flex-direction: column;
    padding-bottom: 50px;
  }
\`;

export const MyComponent_onRender = () => {
  const state = useLexicalScope()[0];;
  return (
    <div gridRowWidth=\\"25%\\"
        class=\\"csw5022\\"
        items={[{title:[{'@type':'@builder.io/sdk:Element','@version':2,layerName:'Accordion item title',id:'builder-5fed2723c1cc4fb39e9d22b9c54ef179',children:[{'@type':'@builder.io/sdk:Element','@version':2,id:'builder-2cad86b387ec405d82917895d7af0a12',component:{name:'Text',options:{text:'<p>Item 1</p>'}},responsiveStyles:{large:{textAlign:'left',display:'flex',flexDirection:'column'}}}],responsiveStyles:{large:{marginTop:'10px',position:'relative',display:'flex',alignItems:'stretch',flexDirection:'column',paddingBottom:'10px'}}}],detail:[{'@type':'@builder.io/sdk:Element','@version':2,layerName:'Accordion item detail',id:'builder-18279a99b32240f19aa21d3f4b015cc9',children:[{'@type':'@builder.io/sdk:Element','@version':2,id:'builder-2dbfa56b8988461c8566bbe759580e9b',component:{name:'Text',options:{text:'<p>Item 1 content</p>'}},responsiveStyles:{large:{paddingTop:'50px',textAlign:'left',display:'flex',flexDirection:'column',paddingBottom:'50px'}}}],responsiveStyles:{large:{position:'relative',display:'flex',alignItems:'stretch',flexDirection:'column',marginTop:'10px',paddingBottom:'10px'}}}]},{title:[{'@type':'@builder.io/sdk:Element','@version':2,layerName:'Accordion item title',id:'builder-2a93def22a354cf7aa193c20d1ad6def',children:[{'@type':'@builder.io/sdk:Element','@version':2,id:'builder-1365fc457ece45db82ad90dbe9819e7c',component:{name:'Text',options:{text:'<p>Item 2</p>'}},responsiveStyles:{large:{textAlign:'left',display:'flex',flexDirection:'column'}}}],responsiveStyles:{large:{marginTop:'10px',position:'relative',display:'flex',alignItems:'stretch',flexDirection:'column',paddingBottom:'10px'}}}],detail:[{'@type':'@builder.io/sdk:Element','@version':2,layerName:'Accordion item detail',id:'builder-fd6ef41da6d040328fbd8b0801611fe5',children:[{'@type':'@builder.io/sdk:Element','@version':2,id:'builder-7362f9fd64c647c5a400d9e75c74473f',component:{name:'Text',options:{text:'<p>Item 2 content</p>'}},responsiveStyles:{large:{paddingTop:'50px',textAlign:'left',display:'flex',flexDirection:'column',paddingBottom:'50px'}}}],responsiveStyles:{large:{position:'relative',display:'flex',alignItems:'stretch',flexDirection:'column',marginTop:'10px',paddingBottom:'10px'}}}]}]}
        animate={true}>
      <div>
        <div builder=\\"accordion\\">
          <div builder=\\"accordion-title\\">
            <div class=\\"csanagh\\">
              <div class=\\"crwdrpw\\">
                <div innerHTML=\\"<p>Item 1</p>\\"
                    class=\\"builder-text\\">
                </div>
              </div>
            </div>
          </div>
          <div builder=\\"accordion-detail\\">
            <div class=\\"c4qyc1p\\">
              <div class=\\"ctcw2m4\\">
                <div innerHTML=\\"<p>Item 1 content</p>\\"
                    class=\\"builder-text\\">
                </div>
              </div>
            </div>
          </div>
        </div>
        <div builder=\\"accordion\\">
          <div builder=\\"accordion-title\\">
            <div class=\\"csanagh\\">
              <div class=\\"crwdrpw\\">
                <div innerHTML=\\"<p>Item 2</p>\\"
                    class=\\"builder-text\\">
                </div>
              </div>
            </div>
          </div>
          <div builder=\\"accordion-detail\\">
            <div class=\\"c4qyc1p\\">
              <div class=\\"ctcw2m4\\">
                <div innerHTML=\\"<p>Item 2 content</p>\\"
                    class=\\"builder-text\\">
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  );
};
",
  "med.jsx": "import { componentFromQrl, qrl, withScopedStylesFromQrl } from \\"@builder.io/qwik\\";


export const MyComponent_onMount = (state) => {;withScopedStylesFromQrl(qrl(\\"./low.js\\", \\"MyComponent_styles\\", []))
return qrl(\\"./low.js\\", \\"MyComponent_onRender\\", [state]);
};
export const MyComponent = componentFromQrl(qrl(\\"./med.js\\", \\"MyComponent_onMount\\", []));
",
}
`;

exports[`qwik For 1`] = `
Object {
  "high.jsx": "
",
  "low.jsx": "import { h, qrl, useLexicalScope } from \\"@builder.io/qwik\\";


export const MyComponent_styles = \`
  .cvdfnp5{
    display: flex;
    flex-direction: column;
    position: relative;
    flex-shrink: 0;
    box-sizing: border-box;
    margin-top: 0px;
    padding-left: 20px;
    padding-right: 20px;
    padding-top: 50px;
    padding-bottom: 50px;
    width: 100vw;
    margin-left: calc(50% - 50vw);
  }
  .cz5wnof{
    width: 100%;
    align-self: stretch;
    flex-grow: 1;
    box-sizing: border-box;
    max-width: 1200px;
    display: flex;
    flex-direction: column;
    align-items: stretch;
    margin-left: auto;
    margin-right: auto;
  }
  .cdrk993{
    text-align: center;
  }
\`;

export const MyComponent_onRender = () => {
  const state = useLexicalScope()[0];;
  return (
    <div class=\\"cvdfnp5\\"
        maxWidth={1200}>
      <section class=\\"cz5wnof\\">
        { (state.simpleList.results || []).map((function(__value__) {
          var state = Object.assign({}, this, {resultsItem: __value__ == null ? {} : __value__});
          return (<div class=\\"cdrk993\\">
            <div class=\\"builder-text\\"
                innerHTML={(() => {
    try { var _virtual_index=state.resultsItem.data.title;return _virtual_index }
    catch (err) {
      console.warn('Builder code error', err);
    }
  })()}>
            </div>
          </div>
          );
        }).bind(state))
        }
      </section>
    </div>
  );
};
",
  "med.jsx": "import { componentFromQrl, qrl, withScopedStylesFromQrl } from \\"@builder.io/qwik\\";


export const MyComponent_onMount = (state) => {;withScopedStylesFromQrl(qrl(\\"./low.js\\", \\"MyComponent_styles\\", []))
return qrl(\\"./low.js\\", \\"MyComponent_onRender\\", [state]);
};
export const MyComponent = componentFromQrl(qrl(\\"./med.js\\", \\"MyComponent_onMount\\", []));
",
}
`;

exports[`qwik Image 1`] = `
Object {
  "high.js": "
",
  "low.js": "import { Image } from \\"./med.js\\";

import { h, qrl, useLexicalScope } from \\"@builder.io/qwik\\";


export const MyComponent_styles = \`
  .cvk52jt{
    display: flex;
    flex-direction: column;
    position: relative;
    flex-shrink: 0;
    box-sizing: border-box;
    margin-top: 20px;
    min-height: 20px;
    min-width: 20px;
    overflow: hidden;
  }
\`;

export const MyComponent_onRender = () => {
  const state = useLexicalScope()[0];;
  return (
    h(
      Image,
      {
        image: \\"https://cdn.builder.io/api/v1/image/assets%2F23dfd7cef1104af59f281d58ec525923%2F4ecf7b7554464b0183ab8250f67e797b\\",
        backgroundSize: \\"cover\\",
        backgroundPosition: \\"center\\",
        class: \\"cvk52jt\\",
        lazy: true,
        fitContent: true,
        aspectRatio: 1,
        height: 1300,
        width: 1300
      }
    )
  );
};
",
  "med.js": "import { componentFromQrl, h, qrl, withScopedStylesFromQrl } from \\"@builder.io/qwik\\";


export const MyComponent_onMount = (state) => {;withScopedStylesFromQrl(qrl(\\"./low.js\\", \\"MyComponent_styles\\", []))
return qrl(\\"./low.js\\", \\"MyComponent_onRender\\", [state]);
};
export const MyComponent = componentFromQrl(qrl(\\"./med.js\\", \\"MyComponent_onMount\\", []));
export const Image = function Image(props){var jsx = props.children || [];var image = props.image;if(image){var isBuilderIoImage = !!(image || '').match(/builder\\\\.io/);var imgProps ={src:props.image,style:\\"object-fit:\\".concat(props.backgroundSize || 'cover',\\";object-position:\\").concat(props.backgroundPosition || 'center',\\";\\")+(props.aspectRatio ? 'position:absolute;height:100%;width:100%;top:0;left:0':''),sizes:props.sizes,alt:props.altText,loading:props.lazy ? 'lazy':undefined,srcset:undefined,};if(isBuilderIoImage){var srcset = ['100','200','400','800','1200','1600','2000'] .map(function(size){return updateQueryParam(image,'width',size)+ ' ' + size + 'w';}).concat([image]).join(',');imgProps.srcset = srcset;jsx = jsx = [ h('picture',{},[ h('source',{type:'image/webp',srcset:srcset}),h('img',imgProps,jsx),]),];}else{jsx = [h('img',imgProps,jsx)];}if(props.aspectRatio && !(props.fitContent && props.children && props.children.length)){var sizingDiv = h('div',{class:'builder-image-sizer',style:\\"width:100%;padding-top:\\".concat((props.aspectRatio || 1)* 100,\\"%;pointer-events:none;font-size:0\\"),});jsx.push(sizingDiv);}}var children = props.children ? [jsx].concat(props.children):[jsx];return h(props.href ? 'a':'div',{href:props.href,class:props.class},children);function updateQueryParam(uri,key,value){if(uri === void 0){uri = '';}var re = new RegExp('([?&])' + key + '=.*?(&|$)','i');var separator = uri.indexOf('?')!==-1 ? '&':'?';if(uri.match(re)){return uri.replace(re,'$1' + key + '=' + encodeURIComponent(value)+ '$2');}return uri + separator + key + '=' + encodeURIComponent(value);}};
",
}
`;

exports[`qwik Image.slow 1`] = `
Object {
  "high.js": "
",
  "low.js": "import { Image } from \\"./med.js\\";

import { h, qrl, useLexicalScope } from \\"@builder.io/qwik\\";


export const MyComponent_styles = \`
  .cvk52jt{
    display: flex;
    flex-direction: column;
    position: relative;
    flex-shrink: 0;
    box-sizing: border-box;
    margin-top: 20px;
    min-height: 20px;
    min-width: 20px;
    overflow: hidden;
  }
\`;

export const MyComponent_onRender = () => {
  const state = useLexicalScope()[0];;
  return (
    h(
      Image,
      {
        image: \\"https://cdn.builder.io/api/v1/image/assets%2F23dfd7cef1104af59f281d58ec525923%2F4ecf7b7554464b0183ab8250f67e797b\\",
        backgroundSize: \\"cover\\",
        backgroundPosition: \\"center\\",
        class: \\"cvk52jt\\",
        lazy: true,
        fitContent: true,
        aspectRatio: 1,
        height: 1300,
        width: 1300
      }
    )
  );
};
",
  "med.js": "import { componentFromQrl, h, qrl, withScopedStylesFromQrl } from \\"@builder.io/qwik\\";


export const MyComponent_onMount = (state) => {;withScopedStylesFromQrl(qrl(\\"./low.js\\", \\"MyComponent_styles\\", []))
return qrl(\\"./low.js\\", \\"MyComponent_onRender\\", [state]);
};
export const MyComponent = componentFromQrl(qrl(\\"./med.js\\", \\"MyComponent_onMount\\", []));
export const Image = function Image(props){var jsx = props.children || [];var image = props.image;if(image){var isBuilderIoImage = !!(image || '').match(/builder\\\\.io/);var imgProps ={src:props.image,style:\\"object-fit:\\".concat(props.backgroundSize || 'cover',\\";object-position:\\").concat(props.backgroundPosition || 'center',\\";\\")+(props.aspectRatio ? 'position:absolute;height:100%;width:100%;top:0;left:0':''),sizes:props.sizes,alt:props.altText,loading:props.lazy ? 'lazy':undefined,srcset:undefined,};if(isBuilderIoImage){var srcset = ['100','200','400','800','1200','1600','2000'] .map(function(size){return updateQueryParam(image,'width',size)+ ' ' + size + 'w';}).concat([image]).join(',');imgProps.srcset = srcset;jsx = jsx = [ h('picture',{},[ h('source',{type:'image/webp',srcset:srcset}),h('img',imgProps,jsx),]),];}else{jsx = [h('img',imgProps,jsx)];}if(props.aspectRatio && !(props.fitContent && props.children && props.children.length)){var sizingDiv = h('div',{class:'builder-image-sizer',style:\\"width:100%;padding-top:\\".concat((props.aspectRatio || 1)* 100,\\"%;pointer-events:none;font-size:0\\"),});jsx.push(sizingDiv);}}var children = props.children ? [jsx].concat(props.children):[jsx];return h(props.href ? 'a':'div',{href:props.href,class:props.class},children);function updateQueryParam(uri,key,value){if(uri === void 0){uri = '';}var re = new RegExp('([?&])' + key + '=.*?(&|$)','i');var separator = uri.indexOf('?')!==-1 ? '&':'?';if(uri.match(re)){return uri.replace(re,'$1' + key + '=' + encodeURIComponent(value)+ '$2');}return uri + separator + key + '=' + encodeURIComponent(value);}};
",
}
`;

exports[`qwik button 1`] = `
Object {
  "high.js": "
export const MyComponent_onClick_0 = () => {
   alert(\\"WORKS!\\");

};

",
  "low.js": "import { CoreButton } from \\"./med.js\\";

import { h, qrl, useLexicalScope } from \\"@builder.io/qwik\\";


export const MyComponent_styles = \`
  .c9nzze9{
    display: flex;
    flex-direction: column;
    position: relative;
    flex-shrink: 0;
    box-sizing: border-box;
    margin-top: 20px;
    appearance: none;
    padding-top: 15px;
    padding-bottom: 15px;
    padding-left: 25px;
    padding-right: 25px;
    background-color: #3898EC;
    color: white;
    border-radius: 4px;
    text-align: center;
    cursor: pointer;
  }
\`;

export const MyComponent_onRender = () => {
  const state = useLexicalScope()[0];;
  return (
    h(
      CoreButton,
      {
        text: \\"Click me!\\",
        class: \\"c9nzze9\\",
        \\"on:click\\": qrl(\\"./high.js\\", \\"MyComponent_onClick_0\\", [state])
      }
    )
  );
};
",
  "med.js": "import { componentFromQrl, h, qrl, withScopedStylesFromQrl } from \\"@builder.io/qwik\\";


export const MyComponent_onMount = (state) => {;withScopedStylesFromQrl(qrl(\\"./low.js\\", \\"MyComponent_styles\\", []))
return qrl(\\"./low.js\\", \\"MyComponent_onRender\\", [state]);
};
export const MyComponent = componentFromQrl(qrl(\\"./med.js\\", \\"MyComponent_onMount\\", []));
export const CoreButton = function CoreButton(props){var hasLink = !!props.link;var hProps ={innerHTML:props.text || '',href:props.link,target:props.openInNewTab ? '_blank':'_self',class:props.class,};return h(hasLink ? 'a':props.tagName$ || 'span',hProps);};
",
}
`;

exports[`qwik component bindings 1`] = `
Object {
  "woo8b6": Object {
    "deviceSize": "large",
    "location": Object {
      "path": "",
      "query": Object {},
    },
  },
}
`;

exports[`qwik component bindings 2`] = `
Object {
  "high.jsx": "
",
  "low.jsx": "import { ComponentD187055AF171488FAD843ACF045D6BF7 } from \\"./med.js\\";

import { Fragment, h, qrl, useLexicalScope } from \\"@builder.io/qwik\\";


export const ComponentD187055AF171488FAD843ACF045D6BF7_styles = \`
  .cj49hqu{
    display: flex;
    flex-direction: column;
    position: relative;
    flex-shrink: 0;
    box-sizing: border-box;
    margin-top: 20px;
    height: auto;
    background-color: rgba(227, 227, 227, 1);
    border-radius: 5px;
    border-style: solid;
    border-color: rgb(0, 0, 0);
    border-width: 1px;
    padding-bottom: 30px;
  }
  .cjrqfb1{
    display: flex;
    flex-direction: column;
    position: relative;
    flex-shrink: 0;
    box-sizing: border-box;
    margin-top: 20px;
    line-height: normal;
    height: auto;
    text-align: center;
  }
\`;

export const ComponentD187055AF171488FAD843ACF045D6BF7_onRender = () => {
  const state = useLexicalScope()[0];;
  return (
    <div class=\\"cj49hqu\\">
      <div class=\\"cjrqfb1\\">
        <div class=\\"builder-text\\"
            innerHTML={(() => {
    try { var _virtual_index=state.title;return _virtual_index }
    catch (err) {
      console.warn('Builder code error', err);
    }
  })()}>
        </div>
      </div>
    </div>
  );
};

export const MyComponent_styles = \`
  .c713ty2{
    display: flex;
    flex-direction: column;
    position: relative;
    flex-shrink: 0;
    box-sizing: border-box;
    margin-top: 20px;
  }
\`;

export const MyComponent_onRender = () => {
  const state = useLexicalScope()[0];;
  return (
    <>
      <div class=\\"c713ty2\\">
        <ComponentD187055AF171488FAD843ACF045D6BF7 title=\\"First title from parent\\"
            serverStateId=\\"woo8b6\\">
        </ComponentD187055AF171488FAD843ACF045D6BF7>
      </div>
      <div class=\\"c713ty2\\">
        <ComponentD187055AF171488FAD843ACF045D6BF7 title=\\"Second title from parent\\"
            serverStateId=\\"woo8b6\\">
        </ComponentD187055AF171488FAD843ACF045D6BF7>
      </div>
    
    </>);
};
",
  "med.jsx": "import { componentFromQrl, qrl, withScopedStylesFromQrl } from \\"@builder.io/qwik\\";


export const ComponentD187055AF171488FAD843ACF045D6BF7_onMount = (state) => {;withScopedStylesFromQrl(qrl(\\"./low.js\\", \\"ComponentD187055AF171488FAD843ACF045D6BF7_styles\\", []))
return qrl(\\"./low.js\\", \\"ComponentD187055AF171488FAD843ACF045D6BF7_onRender\\", [state]);
};
export const ComponentD187055AF171488FAD843ACF045D6BF7 = componentFromQrl(qrl(\\"./med.js\\", \\"ComponentD187055AF171488FAD843ACF045D6BF7_onMount\\", []));
export const MyComponent_onMount = (state) => {(() => { 
/*
  * Global objects available:
  *
  * state - builder state object - learn about state https://www.builder.io/c/docs/guides/state-and-actions
  * context - builder context object - learn about state https://github.com/BuilderIO/builder/tree/main/packages/react#passing-data-and-functions-down
  * fetch - Fetch API - https://developer.mozilla.org/en-US/docs/Web/API/Fetch_API'
  * Builder - Builder object - useful values include: Builder.isServer, Builder.isBrowser, Builder.isPreviewing, Builder.isEditing
  *
  * visit https://www.builder.io/c/docs/guides/custom-code
  * for more information on writing custom code
  */
async function main() {
  if (Builder.isServer) {// Place any code here you want to only run on the server. Any  
    // data fetched on the server will be available to re-hydrate on the client
    // if added to the state object
  }

  if (Builder.isBrowser) {// Place code that you only want to run in the browser (client side only) here
    // For example, anything that uses document/window access or DOM manipulation
  }

  state.something = \\"works!\\";
}

return main();
})();withScopedStylesFromQrl(qrl(\\"./low.js\\", \\"MyComponent_styles\\", []))
return qrl(\\"./low.js\\", \\"MyComponent_onRender\\", [state]);
};
export const MyComponent = componentFromQrl(qrl(\\"./med.js\\", \\"MyComponent_onMount\\", []));
",
}
`;

exports[`qwik hello_world stylesheet 1`] = `
Object {
  "high.jsx": "
",
  "low.jsx": "import { h, qrl, useLexicalScope } from \\"@builder.io/qwik\\";


export const MyComponent_styles = \`
  .crt27f8{
    display: flex;
    flex-direction: column;
    position: relative;
    flex-shrink: 0;
    box-sizing: border-box;
    margin-top: 123px;
    line-height: normal;
    height: auto;
    text-align: center;
    margin-left: auto;
    margin-right: auto;
  }
\`;

export const MyComponent_onRender = () => {
  const state = useLexicalScope()[0];;
  return (
    <div class=\\"crt27f8\\">
      <p>Hello <span class=\\"names\\">World</span></p>
</div>
  );
};
",
  "med.jsx": "import { componentFromQrl, qrl, withScopedStylesFromQrl } from \\"@builder.io/qwik\\";


export const MyComponent_onMount = (state) => {;withScopedStylesFromQrl(qrl(\\"./low.js\\", \\"MyComponent_styles\\", []))
return qrl(\\"./low.js\\", \\"MyComponent_onRender\\", [state]);
};
export const MyComponent = componentFromQrl(qrl(\\"./med.js\\", \\"MyComponent_onMount\\", []));
",
}
`;

exports[`qwik page-with-symbol 1`] = `
Object {
  "high.js": "
",
  "low.js": "import { Symbol1 } from \\"./med.js\\";

import { Fragment, h, qrl, useLexicalScope } from \\"@builder.io/qwik\\";


export const MyComponent_styles = \`
  .c713ty2{
    display: flex;
    flex-direction: column;
    position: relative;
    flex-shrink: 0;
    box-sizing: border-box;
    margin-top: 20px;
  }
  .cxvcn5v{
    display: flex;
    flex-direction: column;
    position: relative;
    flex-shrink: 0;
    box-sizing: border-box;
    margin-top: 20px;
    line-height: normal;
    height: auto;
    text-align: center;
    padding-top: 1em;
    padding-bottom: 1em;
    font-weight: 700;
    font-size: 24px;
  }
\`;

export const MyComponent_onRender = () => {
  const state = useLexicalScope()[0];;
  return (
    h(Fragment, null,
      h(
        Symbol1,
        {
          class: \\"c713ty2\\",
          symbol: {model:'page',entry:'36da1052e57e47f084ea8b1fbde248e4',data:{}}
        }
      ),
      h(
        \\"div\\",
        {
          class: \\"cxvcn5v\\"
        },
        \\"<p>Main Text</p>\\"
      )
    )
  );
};
",
  "med.js": "import { componentFromQrl, qrl, withScopedStylesFromQrl } from \\"@builder.io/qwik\\";


export const MyComponent_onMount = (state) => {;withScopedStylesFromQrl(qrl(\\"./low.js\\", \\"MyComponent_styles\\", []))
return qrl(\\"./low.js\\", \\"MyComponent_onRender\\", [state]);
};
export const MyComponent = componentFromQrl(qrl(\\"./med.js\\", \\"MyComponent_onMount\\", []));
",
}
`;

exports[`qwik svg 1`] = `
Object {
  "high.js": "
",
  "low.js": "import { h, qrl, useLexicalScope } from \\"@builder.io/qwik\\";


export const MyComponent_styles = \`
  .c8xlkz3{
    display: flex;
    flex-direction: column;
    align-items: stretch;
    position: relative;
    flex-shrink: 0;
    box-sizing: border-box;
    margin-top: auto;
    margin-bottom: auto;
  }
\`;

export const MyComponent_onRender = () => {
  const state = useLexicalScope()[0];;
  return (
    h(
      \\"div\\",
      {
        class: \\"c8xlkz3\\"
      },
      h(
        \\"div\\",
        {
          innerHTML: \\"<svg\\\\n  width=\\\\\\"42\\\\\\"\\\\n  height=\\\\\\"42\\\\\\"\\\\n  viewBox=\\\\\\"0 0 42 42\\\\\\"\\\\n  fill=\\\\\\"none\\\\\\"\\\\n  xmlns=\\\\\\"http://www.w3.org/2000/svg\\\\\\"\\\\n>\\\\n  <path\\\\n    d=\\\\\\"M19.626 0.0327762C19.5357 0.0409786 19.2486 0.0696867 18.9903 0.0901925C13.0313 0.627445 7.4496 3.84276 3.9144 8.78466C1.94585 11.5324 0.686788 14.6493 0.211053 17.9508C0.0429057 19.1032 0.0223999 19.4436 0.0223999 21.0061C0.0223999 22.5687 0.0429057 22.9091 0.211053 24.0615C1.35118 31.9398 6.95747 38.5591 14.561 41.0116C15.9226 41.4504 17.358 41.7498 18.9903 41.9302C19.626 42 22.3737 42 23.0094 41.9302C25.8269 41.6186 28.2138 40.9214 30.5679 39.7197C30.9288 39.5352 30.9985 39.486 30.9493 39.4449C30.9165 39.4203 29.3785 37.3575 27.533 34.8639L24.1782 30.3322L19.9746 24.1107C17.6615 20.6903 15.7586 17.8933 15.7422 17.8933C15.7257 17.8892 15.7093 20.6534 15.7011 24.0287C15.6888 29.9385 15.6847 30.1763 15.6109 30.3158C15.5043 30.5167 15.4223 30.5987 15.25 30.689C15.1188 30.7546 15.0039 30.7669 14.3847 30.7669H13.6752L13.4865 30.648C13.3635 30.57 13.2733 30.4675 13.2117 30.3486L13.1256 30.164L13.1338 21.9412L13.1461 13.7143L13.2733 13.5543C13.3389 13.4682 13.4783 13.3575 13.5767 13.3041C13.7449 13.2221 13.8105 13.2139 14.52 13.2139C15.3566 13.2139 15.4961 13.2467 15.7134 13.4846C15.775 13.5502 18.0511 16.9788 20.7743 21.1086C23.4975 25.2385 27.2213 30.8776 29.0504 33.6459L32.3724 38.678L32.5405 38.5673C34.0292 37.5994 35.6041 36.2214 36.8508 34.786C39.5043 31.7389 41.2145 28.0232 41.7886 24.0615C41.9568 22.9091 41.9773 22.5687 41.9773 21.0061C41.9773 19.4436 41.9568 19.1032 41.7886 17.9508C40.6485 10.0724 35.0422 3.45315 27.4387 1.00065C26.0976 0.565927 24.6704 0.266542 23.0709 0.0860913C22.6772 0.0450797 19.9664 -3.30508e-05 19.626 0.0327762ZM28.2138 12.7218C28.4106 12.8202 28.5706 13.0089 28.628 13.2057C28.6608 13.3123 28.669 15.5926 28.6608 20.7313L28.6485 28.1052L27.3484 26.1121L26.0443 24.1189V18.7587C26.0443 15.2932 26.0607 13.3451 26.0853 13.2508C26.1509 13.0212 26.2944 12.8407 26.4913 12.7341C26.6595 12.648 26.721 12.6397 27.3649 12.6397C27.9718 12.6397 28.0785 12.648 28.2138 12.7218Z\\\\\\"\\\\n    fill=\\\\\\"#9CD3D7\\\\\\"\\\\n  />\\\\n  <path\\\\n    d=\\\\\\"M32.1674 38.7681C32.0239 38.8584 31.9787 38.9199 32.1059 38.8502C32.1961 38.7968 32.3437 38.6861 32.3191 38.682C32.3068 38.682 32.2371 38.723 32.1674 38.7681ZM31.8844 38.9527C31.8106 39.0101 31.8106 39.0142 31.9008 38.9691C31.95 38.9445 31.991 38.9158 31.991 38.9076C31.991 38.8748 31.9705 38.883 31.8844 38.9527ZM31.6794 39.0757C31.6055 39.1331 31.6055 39.1372 31.6958 39.0921C31.745 39.0675 31.786 39.0388 31.786 39.0306C31.786 38.9978 31.7655 39.006 31.6794 39.0757ZM31.4743 39.1988C31.4005 39.2562 31.4005 39.2603 31.4907 39.2152C31.5399 39.1906 31.5809 39.1618 31.5809 39.1536C31.5809 39.1208 31.5604 39.129 31.4743 39.1988ZM31.1626 39.3628C31.0068 39.4448 31.015 39.4776 31.1708 39.3997C31.2405 39.3628 31.2938 39.3259 31.2938 39.3177C31.2938 39.289 31.2897 39.2931 31.1626 39.3628Z\\\\\\"\\\\n    fill=\\\\\\"#9CD3D7\\\\\\"\\\\n  />\\\\n</svg>\\\\n\\"
        }
      )
    )
  );
};
",
  "med.js": "import { componentFromQrl, qrl, withScopedStylesFromQrl } from \\"@builder.io/qwik\\";


export const MyComponent_onMount = (state) => {;withScopedStylesFromQrl(qrl(\\"./low.js\\", \\"MyComponent_styles\\", []))
return qrl(\\"./low.js\\", \\"MyComponent_onRender\\", [state]);
};
export const MyComponent = componentFromQrl(qrl(\\"./med.js\\", \\"MyComponent_onMount\\", []));
",
}
`;

exports[`qwik todo Todo.cjs 1`] = `
Object {
  "high.cjs": "const useEvent = require(\\"@builder.io/qwik\\").useEvent;
const useLexicalScope = require(\\"@builder.io/qwik\\").useLexicalScope;


exports.Todo_onClick_0 = () => {
  const state = useLexicalScope()[0];;
  
  state.toggle();
};

exports.Todo_onDblClick_1 = () => {
  const state = useLexicalScope()[0];;
  
  state.editing = true;
};

exports.Todo_onClick_2 = () => {
  
  todosState.todos.splice(todosState.todos.indexOf(props.todo));
};

exports.Todo_onBlur_3 = () => {
  const state = useLexicalScope()[0];;
  
  state.editing = false;
};

exports.Todo_onKeyUp_4 = () => {
  {
    const event = useEvent();
    props.todo.text = event.target.value
  }
};

",
  "low.cjs": "
",
  "med.cjs": "const componentFromQrl = require(\\"@builder.io/qwik\\").componentFromQrl;
const h = require(\\"@builder.io/qwik\\").h;
const qrl = require(\\"@builder.io/qwik\\").qrl;
const useLexicalScope = require(\\"@builder.io/qwik\\").useLexicalScope;


exports.Todo_onMount = (state) => {;
return qrl(\\"./med.js\\", \\"Todo_onRender\\", [state]);
};
exports.Todo = componentFromQrl(qrl(\\"./med.js\\", \\"Todo_onMount\\", []));

exports.Todo_onRender = () => {
const state = useLexicalScope()[0];;
return (
  h(
    \\"li\\",
    {
      class: \`\${props.todo.completed ? 'completed' : ''} \${state.editing ? 'editing' : ''}\`
    },
    h(
      \\"div\\",
      {
        class: \\"view\\"
      },
      h(
        \\"input\\",
        {
          type: \\"checkbox\\",
          class: \\"toggle\\",
          checked: props.todo.completed,
          \\"on:click\\": qrl(\\"./high.js\\", \\"Todo_onClick_0\\", [state])
        }
      ),
      h(
        \\"label\\",
        {
          \\"on:dblclick\\": qrl(\\"./high.js\\", \\"Todo_onDblClick_1\\", [state])
        },
        props.todo.text
      ),
      h(
        \\"button\\",
        {
          class: \\"destroy\\",
          \\"on:click\\": qrl(\\"./high.js\\", \\"Todo_onClick_2\\", [state])
        }
      )
    ),
    state.editing ?
      h(
        \\"input\\",
        {
          class: \\"edit\\",
          value: props.todo.text,
          \\"on:blur\\": qrl(\\"./high.js\\", \\"Todo_onBlur_3\\", [state]),
          \\"on:keyup\\": qrl(\\"./high.js\\", \\"Todo_onKeyUp_4\\", [state])
        }
      )
      : null
  )
);
};
",
}
`;

exports[`qwik todo Todo.js 1`] = `
Object {
  "high.js": "import{useEvent,useLexicalScope}from\\"@builder.io/qwik\\";export const Todo_onClick_0=()=>{const state=useLexicalScope()[0];;
  state.toggle();};export const Todo_onDblClick_1=()=>{const state=useLexicalScope()[0];;
  state.editing = true;};export const Todo_onClick_2=()=>{
  todosState.todos.splice(todosState.todos.indexOf(props.todo));};export const Todo_onBlur_3=()=>{const state=useLexicalScope()[0];;
  state.editing = false;};export const Todo_onKeyUp_4=()=>{{const event=useEvent();props.todo.text = event.target.value}};",
  "low.js": "",
  "med.js": "import{componentFromQrl,h,qrl,useLexicalScope}from\\"@builder.io/qwik\\";export const Todo_onMount=(state)=>{;return qrl(\\"./med.js\\",\\"Todo_onRender\\",[state]);};export const Todo=componentFromQrl(qrl(\\"./med.js\\",\\"Todo_onMount\\",[]));export const Todo_onRender=()=>{const state=useLexicalScope()[0];;return (h(\\"li\\",{class:\`\${props.todo.completed ? 'completed' : ''} \${state.editing ? 'editing' : ''}\`},h(\\"div\\",{class:\\"view\\"},h(\\"input\\",{type:\\"checkbox\\",class:\\"toggle\\",checked:props.todo.completed,\\"on:click\\":qrl(\\"./high.js\\",\\"Todo_onClick_0\\",[state])}),h(\\"label\\",{\\"on:dblclick\\":qrl(\\"./high.js\\",\\"Todo_onDblClick_1\\",[state])},props.todo.text),h(\\"button\\",{class:\\"destroy\\",\\"on:click\\":qrl(\\"./high.js\\",\\"Todo_onClick_2\\",[state])})),state.editing?h(\\"input\\",{class:\\"edit\\",value:props.todo.text,\\"on:blur\\":qrl(\\"./high.js\\",\\"Todo_onBlur_3\\",[state]),\\"on:keyup\\":qrl(\\"./high.js\\",\\"Todo_onKeyUp_4\\",[state])}):null));};",
}
`;

exports[`qwik todo Todo.tsx 1`] = `
Object {
  "high.tsx": "import { useEvent, useLexicalScope } from \\"@builder.io/qwik\\";


export const Todo_onClick_0 = () => {
  const state = useLexicalScope()[0];;
  
  state.toggle();
};

export const Todo_onDblClick_1 = () => {
  const state = useLexicalScope()[0];;
  
  state.editing = true;
};

export const Todo_onClick_2 = () => {
  
  todosState.todos.splice(todosState.todos.indexOf(props.todo));
};

export const Todo_onBlur_3 = () => {
  const state = useLexicalScope()[0];;
  
  state.editing = false;
};

export const Todo_onKeyUp_4 = () => {
  {
    const event = useEvent();
    props.todo.text = event.target.value
  }
};

",
  "low.tsx": "
",
  "med.tsx": "import { componentFromQrl, h, qrl, useLexicalScope } from \\"@builder.io/qwik\\";


export const Todo_onMount = (state) => {;
return qrl(\\"./med.js\\", \\"Todo_onRender\\", [state]);
};
export const Todo = componentFromQrl<any, any>(qrl(\\"./med.js\\", \\"Todo_onMount\\", []));

export const Todo_onRender = () => {
const state = useLexicalScope()[0];;
return (
  <li class={\`\${props.todo.completed ? 'completed' : ''} \${state.editing ? 'editing' : ''}\`}>
    <div class=\\"view\\">
      <input type=\\"checkbox\\"
          class=\\"toggle\\"
          checked={props.todo.completed}
          on:click={qrl(\\"./high.js\\", \\"Todo_onClick_0\\", [state])}>
      </input>
      <label on:dblclick={qrl(\\"./high.js\\", \\"Todo_onDblClick_1\\", [state])}>
        {props.todo.text}
      </label>
      <button class=\\"destroy\\"
          on:click={qrl(\\"./high.js\\", \\"Todo_onClick_2\\", [state])}>
      </button>
    </div>
    { state.editing ?
      <input class=\\"edit\\"
          value={props.todo.text}
          on:blur={qrl(\\"./high.js\\", \\"Todo_onBlur_3\\", [state])}
          on:keyup={qrl(\\"./high.js\\", \\"Todo_onKeyUp_4\\", [state])}>
      </input>
      : null
    }
  </li>
);
};
",
}
`;

exports[`qwik todos Todo.tsx 1`] = `
Object {
  "high.tsx": "
export const Todos_onClick_0 = () => {
  
  const newValue = !todosState.allCompleted;

  for (const todoItem of todosState.todos) {
    todoItem.completed = newValue;
  }
};

",
  "low.tsx": "import { Todo } from \\"./med.js\\";

import { h, qrl, useLexicalScope } from \\"@builder.io/qwik\\";



export const Todos_onRender = () => {
  const state = useLexicalScope()[0];;
  return (
    <section class=\\"main\\">
      { todosState.todos.length ?
        <input type=\\"checkbox\\"
            class=\\"toggle-all\\"
            checked={todosState.allCompleted}
            on:click={qrl(\\"./high.js\\", \\"Todos_onClick_0\\", [state])}>
        </input>
        : null
      }
      <ul class=\\"todo-list\\">
        { (todosState.todos || []).map((function(__value__) {
          var state = Object.assign({}, this, {todosItem: __value__ == null ? {} : __value__});
          return (<Todo todo={todo}>
          </Todo>
          );
        }).bind(state))
        }
      </ul>
    </section>
  );
};
",
  "med.tsx": "import { componentFromQrl, qrl } from \\"@builder.io/qwik\\";


export const Todos_onMount = (state) => {;
return qrl(\\"./low.js\\", \\"Todos_onRender\\", [state]);
};
export const Todos = componentFromQrl<any, any>(qrl(\\"./med.js\\", \\"Todos_onMount\\", []));
",
}
`;
